# gemma4-openvino-genai

./: .gitignore  2026-04-17-mmap-investigation.md  20260508_dense_weight_streaming_plan.md  20260510_group_size_tuning_and_verification.md  20260511_architecture_review.md  20260511_phase2_weight_streaming.md  20260512_per_layer_embedding_offload.md  20260513_dual_nvme_streaming_analysis.md  20260514_cl_out_of_resources_analysis.md  20260514_pipeline_overlap_fix.md  20260515_how_to_build_deploy_debug_profile.md  20260520_memory_footprint_8gb_analysis.md  20260520_new_system_full_matrix.md  20260520_next_system_dual_nvme_handoff.md  20260520_pipeline_profile_and_memory_root_cause.md  20260630_openvino2026.2_gemma4_e4b_setup_notes.md  20260702_ple_directio_build_deploy_guide.md  20260708_gemma4_e4b_26b_kpi_results.md  20260709_llama_comparison_load_memory.md  README.md  RELEASE_README.md  SESSION_NOTES.md  analyze_8gb_budget.py  analyze_footprint.py  analyze_weights.py  bench_ple_off.txt  bench_ple_on.txt  benchmark.py  benchmark_asus_kpi.py  benchmark_embedding_io.py  benchmark_kpi.py  benchmark_kpi2.py  benchmark_loadmem.py  build_openvino_streaming.ps1  create_release.ps1  create_release_v2.ps1  deploy_streaming_to_openvino.ps1  gpu_plugin_streaming.patch  measure_load_time.py  ocr-test-result.md  (+34 more)
.github/: copilot-instructions.md
cpp/: CMakeLists.txt  benchmark_directstorage_io.cpp  benchmark_kpi.cpp  benchmark_pipeline.cpp  cldnn_stubs.hpp  dense_weight_streaming_manager.cpp  dense_weight_streaming_manager.hpp  load_image.cpp  load_image.hpp  run_gemma4.cpp
reference/: ds_perf_test.cpp  ds_perf_test_cmake.txt  ds_perf_test_readme.md  moe_cpp_CMakeLists.txt  moe_expert_weight_manager.hpp  moe_expert_weight_manager_key_patterns.md
temp/: bench_directio.json  bench_mmap.json  env_caseB.ps1  env_caseC.ps1  env_caseD_dual.ps1  env_caseD_single.ps1  gpumem_caseB.csv  gpumem_caseB.summary.txt  gpumem_caseC.csv  gpumem_caseC.summary.txt  gpumem_caseD_dual.csv  gpumem_caseD_dual.summary.txt  gpumem_caseD_single.csv  gpumem_caseD_single.summary.txt  gpumem_probe_v4.ps1  prompt_text.txt  track_a_run.ps1  track_a_v4.ps1
